<resources>
    <string name="app_name">IntentCalculator</string>
    <string name="text_name_programm">Приложение \n (Скрытый калькулятор)</string>
    <string name="button_text">Калькулятор</string>
    <string name="result_text">тут появится результат</string>
    <string name="text_input1">Поле ввода 1</string>
    <string name="text_input2">Поле ввода 2</string>
    <string name="ButtonSum_text">+</string>
    <string name="ButtonDiv_text">-</string>
    <string name="ButtonDif_text">/</string>
    <string name="ButtonMult_text">*</string>
    <string name="ButtonTransfer_text">Передать данные</string>
</resources>